--- a/appDev/app6K/index.html
+++ b/appDev/app6K/index.html
@@ -58,6 +58,170 @@
 
 <main>
 
+<div class="zetka">
+    <div dev><h1>ZETKA</h1></div>
+
+    <div dev class="zetka-side">
+        <div dev>2018.1.11</div>
+    </div>
+
+    <div dev class="zetka-layer">
+        <div dev>zetka-layer</div>
+    </div>
+    <div dev class="zetka-layer zetka-as-overmain">
+        <div dev>zetka-layer zetka-as-overmain</div>
+        <div dev>zetka-layer zetka-as-overmain</div>
+    </div>
+    <div dev class="zetka-layer zetka-as-main">
+        <div dev>zetka-layer zetka-as-main</div>
+        <div dev>zetka-layer zetka-as-main</div>
+    </div>
+
+
+    <div dev class="zetka-layer">
+        <div dev class="zetka-menu">
+            <div dev>zetka-menu</div>
+        </div>
+        <div dev>zetka-layer</div>
+        <div dev class="zetka-side">
+            <div dev>zetka-side</div>
+        </div>
+    </div>
+
+    <div dev class="zetka-third-one">
+        <div dev>zetka-third-one</div>
+    </div>
+    <div dev class="zetka-third-two">
+        <div dev>zetka-third-two</div>
+    </div>
+    <div dev class="zetka-third-tri">
+        <div dev>zetka-third-tri</div>
+    </div>
+
+
+    <div dev class="zetka-menu-screen">
+        <div dev>zetka-menu-screen</div>
+    </div>
+    <div dev class="zetka-overmain">
+        <div dev>zetka-overmain</div>
+    </div>
+    <div dev class="zetka-side-screen">
+        <div dev>zetka-side-screen</div>
+    </div>
+
+
+    <div dev class="zetka-merge">
+        <div dev class="zetka-menu">
+            <div dev>zetka-menu</div>
+        </div>
+        <div dev>zetka-merge</div>
+        <div dev class="zetka-side">
+            <div dev>zetka-side</div>
+        </div>
+    </div>
+
+    <div dev class="zetka-merge-menu">
+        <div dev class="zetka-menu">
+            <div dev>zetka-menu</div>
+        </div>
+        <div dev>zetka-merge-menu</div>
+    </div>
+
+    <div dev class="zetka-merge-side">
+        <div dev>zetka-merge-side</div>
+        <div dev class="zetka-side">
+            <div dev>zetka-side</div>
+        </div>
+    </div>
+
+    <div dev class="zetka-merge-menu-screen">
+        <div dev class="zetka-menu">
+            <div dev>zetka-menu</div>
+        </div>
+        <div dev>zetka-merge-menu-screen</div>
+        <div dev class="zetka-side">
+            <div dev>zetka-side</div>
+        </div>
+    </div>
+
+    <div dev class="zetka-merge-side-screen">
+        <div dev class="zetka-menu">
+            <div dev>zetka-menu</div>
+        </div>
+        <div dev>zetka-merge-side-screen</div>
+        <div dev class="zetka-side">
+            <div dev>zetka-side</div>
+        </div>
+    </div>
+
+
+    <div dev class="zetka-half-screen-one">
+        <div dev>zetka-half-screen-one</div>
+        <div dev class="zetka-menu">
+            <div dev>zetka-menu</div>
+        </div>
+        <div dev class="zetka-overmain">
+            <div dev>zetka-overmain</div>
+        </div>
+    </div>
+    <div dev class="zetka-half-screen-two">
+        <div dev>zetka-half-screen-two</div>
+        <div dev class="zetka-overmain">
+            <div dev>zetka-overmain</div>
+        </div>
+        <div dev class="zetka-side">
+            <div dev>zetka-side</div>
+        </div>
+    </div>
+
+    <div dev class="zetka-half-one">
+        <div dev>zetka-half-one</div>
+    </div>
+    <div dev class="zetka-half-two">
+        <div dev>zetka-half-two</div>
+    </div>
+
+    <div dev class="zetka-overhalf-one">
+        <div dev>zetka-overhalf-one</div>
+    </div>
+    <div dev class="zetka-overhalf-two">
+        <div dev>zetka-overhalf-two</div>
+    </div>
+
+    <div dev class="zetka-third-merge-one">
+        <div dev>zetka-third-merge-one</div>
+    </div>
+    <div dev class="zetka-third-tri">
+        <div dev>zetka-third-tri</div>
+    </div>
+
+    <div dev class="zetka-third-one">
+        <div dev>zetka-third-merge-one</div>
+    </div>
+    <div dev class="zetka-third-merge-tri">
+        <div dev>zetka-third-tri</div>
+    </div>
+
+</div>
+
+<style>
+    [dev][class]:hover {
+        outline: 2px solid firebrick;
+        position: relative;
+    }
+    [dev][class]:hover:after {
+        content: attr(class);
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right:0;
+        background-color: firebrick;
+        color: white;
+        padding: 0 0.2em;
+        text-align: center;
+        font-size: 2em;
+    }
+</style>
 
 <section class="design-template">
 
