gl content improvments

--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -24,7 +24,6 @@
 
 <body class="design">
 
-
     <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
     <!-- =================================================== [FIRST] -->
     <article c-tools>
@@ -267,6 +266,7 @@
             <a href="http://b64.io/" class="red"><i>base64 enc</i></a>
             <figure>
                 <a href="https://jakearchibald.github.io/svgomg/">Optimize SVG</a>
+                <a href="https://tinypng.com/">PNG</a>
             </figure>
             <figure>
                 <a href="https://cloudconvert.com/website-to-pdf"><i>url·pdf</i></a>
