--- a/appDev/app6K/content-data.html
+++ b/appDev/app6K/content-data.html
@@ -2,7 +2,8 @@
 <meta charset="utf-8">
 <title>content-data</title>
 <body>
-
+<!-- ========================================= ʕ⊙ᴥ⊙ʔ  -->
+<!-- ========================================= START CONTENT -->
 
 
 <header>
@@ -22,7 +23,7 @@
 </p>
 
 
-
-
+<!-- ========================================= END CONTENT -->
+<!-- ========================================= ʕ⊙ᴥ⊙ʔ  -->
 <footer>EOC.</footer>
 </body>
