--- a/appDev/app6K/content-meta.html
+++ b/appDev/app6K/content-meta.html
@@ -25,6 +25,7 @@
     <!-- / -->
 
     <!-- FAVICON -->
+    <!-- 2019.1, best favicon service: https://realfavicongenerator.net/ -->
     <meta name="theme-color" content="#E08E79">
     <meta name="msapplication-TileColor" content="#E08E79">
     <meta name="msapplication-TileImage" content="app/favicons/144x144.png">
