--- a/appDev/app6K/demo-vane.html
+++ b/appDev/app6K/demo-vane.html
@@ -1,6 +1,7 @@
 <!doctype html><!-- app6011 -->
 <html lang="en">
 <!-- published 2018.12.8 - evolution -->
+<!-- update    2019.1.28 - zetka -->
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -33,9 +34,9 @@
 </head>
 <body class="body-wrap design-template">
 
-<main class="grid">
+<main class="zetka">
 
-<header class="layer grid box bg">
+<header class="zetka-layer is-box">
     <h1>Кандава Вана</h1>
 </header>
 
@@ -47,11 +48,11 @@
 
 <p>Мне стало интересно как они себя поведут, когда посветлеет. Сразу ли поменяются местами или же будут по привычке гоняться друг за другом в прежнем порядке. И так меня это заинтересовало, что я стал крепко смотреть по сторонам, чтобы разглядеть силуэты и не сводить с них глаз до самого рассвета. Ни крысу, ни кошку я не увидел — кто же их выпустит на дорогу в такое время. Зато, когда глаза привыкли к темноте, я разглядел лисицу.</p>
 
-<aside aside>
-    ¹ Потрогал за ягодицу — угодил в темницу
+<aside class="zetka-side">
+    <div>¹ Потрогал за ягодицу — угодил в темницу</div>
 </aside>
 
-<div class="block box bg">
+<div class="zetka-overmain is-box">
 <pre>Следом за ней куницу.
 Синицу и еще какую-то птицу.
 Волчицу и, как это ни странно, тигрицу.
@@ -64,27 +65,24 @@
 
 <p>А когда судья отпустил меня под честное слово, я огляделся и никого больше не увидел. Только лишь снежные поля, силуэты деревьев и редкие огоньки у горизонта. У одного из огоньков, в маленьком домике сидел старый немец.</p>
 
+<div class="zetka-block">
+
 <p>— <em>Дядюшка, Ханс!</em> — поздоровался я с хозяином, — <em>расскажите мне про Магдалену Нойер. Почему она бегает как лиса, а стреляет как охотник? И почему от этого у нее так много золотых медалей и ни одного мужа. Тогда как братья Дукурисы и мужья знатные и медаль у них только одна серебрянная на двоих.</em></p>
 
-<aside class="aside has-block">
-    <section class="block box bg">
-        <p>Старик налил мне молока, поставил миску с бобами и ломоть мягкого деревенского хлеба. Мне бы твои годы сынок, говорит, я бы и сам как Магдалена встал на лыжи. Потому что как ни крути, а на лыжах куда сподручнее сбегать к соседке за солью. И убежал.</p>
-    </section>
-</aside>
 
 <p>Старик налил мне молока, поставил миску с бобами и ломоть мягкого деревенского хлеба. Мне бы твои годы сынок, говорит, я бы и сам как Магдалена встал на лыжи. Потому что как ни крути, а на лыжах куда сподручнее сбегать к соседке за солью. И убежал.</p>
 
 <p>И забрал с собою бобы, хлеб, огонек и маленький домик. Передо мною как были снежные поля и дорога, так они и остались. Только молоко старик не забрал — кружка разлилась, и от этого снег сделался еще белее. И от этой белизны грусть белая на меня накатила. Как же так, убежал старик и даже не попрощался. И как же я так невежливо без приглашения сел за стол со своими вопросами. Решил больше так никогда не делать.</p>
 
-<p>Так и быть, говорю. Теперь всегда буду говорить: здравствуйте, я Зиновий, у меня в рюкзаке есть тельняшка.  И как только я решил быть вежливым, сразу грусть ушла. А тут и рыбный обоз меня нагнал.</p>
-
-<aside class="aside has-block">
-    <figure class="block">
-        <img src="art/design-template/icon.svg" height="150" alt="">
-    </figure>
+</div>
+<aside class="zetka-side is-box">
+    <p>Старик налил мне молока, поставил миску с бобами и ломоть мягкого деревенского хлеба. Мне бы твои годы сынок, говорит, я бы и сам как Магдалена встал на лыжи. Потому что как ни крути, а на лыжах куда сподручнее сбегать к соседке за солью. И убежал.</p>
 </aside>
 
-<section class="block box bg">
+
+<p>Так и быть, говорю. Теперь всегда буду говорить: здравствуйте, я Зиновий, у меня в рюкзаке есть тельняшка.  И как только я решил быть вежливым, сразу грусть ушла. А тут и рыбный обоз меня нагнал.</p>
+
+<section class="zetka-block is-box">
 
 <p>— <em>Здравствуйте,</em> — кланяюсь, — <em>я Зиновий из Белорусии. А что вы везете в вашем обозе?</em></p>
 
@@ -94,13 +92,19 @@
 
 </section>
 
+<aside class="zetka-side">
+    <figure>
+        <img src="art/design-template/icon.svg" height="150" alt="">
+    </figure>
+</aside>
+
 <p>Рыбный обоз утвердительно кивнул, включил нитро и скрылся за поворотом. А я вновь остался один посреди полей и начал думать обо всем что произошло.</p>
 
 <p>Цемент, песок и перфоратор не могли появиться случайно именно в тот момент, когда они мне больше всего нужны. Значит и все остальные встречи не были случайными или придуманными. Магдалена Нойер это немецкая биатлонистка. А поскольку недавно была олимпиада, то теперь каждый второй на этой пустынной дороге просит дядюшку Ханса рассказать о ней. Молоко — это потому что вокруг все белое. Тучи выпустили на небо луну и снежные просторы стали еще ярче, отчего показалось что молоко разлилось.</p>
 
 <p>Нитро — это ускоритель на маленьких гоночных машинках в компьютерных играх. Беларусь, скорее всего от усталости. А Маткуле от Айзупе. Еще в детстве бабушка говорила — маткуле от айзупе недалеко падает. В маткуле ходить - коленки холодить. Кому спица в сапоге, а кому и дом родной — маткуле.</p>
 
-<section block wrap-row bg>
+<section style="zetka-merge is-box">
 
     <p>Вспоминая бабушкины поговорки я вышел к развилке с дорожным знаком. На знаке было написано:</p>
 
@@ -122,7 +126,7 @@
     <li>снык...
 </ul>
 
-<section class="block box bg has-text-accent">
+<section class="zetka-block is-box has-text-accent">
     <p>... Нет такого слова «снык». Но попробуйте очень быстро назвать доброе слово на букву С. Получится какой-то снык.</p>
 </section>
 
@@ -150,9 +154,9 @@
 
 <p>И тогда я сообразил, что в Кабиле живут немного эгоистичные люди. Которые хотят, чтобы у них был и кадиллак, и крем-брюле, и карусель во дворе. А в Сабиле живут люди высокой духовности, желающие счастья и солнца каждому. Мне никак не хочется считать себя эгоистом, но ведь каждый перед этим знаком думает точно так же и сворачивает в Сабиле. Может быть оттого в Кабиле и люди такие, что никто к ним не ходит и вестей добрых не приносит.</p>
 
-<figure class="layer grid">
-    <img src="art/design-template/bg__dark.jpg" class="illustration zzz" alt="">
-    <figcaption aside>никто к ним не ходит и вестей добрых не приносит</figcaption>
+<figure class="zetka-merge is-box">
+    <div class="zetka-merge-menu"><img src="art/design-template/bg__dark.jpg" class="illustration zzz" alt=""></div>
+    <figcaption class="zetka-side">никто к ним не ходит и вестей добрых не приносит</figcaption>
 </figure>
 
 <p>Поднявшись со скамейки и смахнув крошки цыгану я зашагал в сторону Кабиле. Но сначала по дороге надо было нарвать добрых вестей.</p>
@@ -184,13 +188,13 @@
 <li>конец
 </ul>
 
-<header class="layer grid box bg">
+<header class="zetka-layer is-box">
     <h2>Глава 2</h2>
 </header>
 
 
 
-<p>Не всегда радостно на душе. Как пройду часа два, начнет спина ныть, коленки ультиматум ставить «вот сейчас начнем болеть — и что ты будешь делать?». Присаживаться снова на пять минут нет смысла. Тут есть только два варианта — либо у тебя открывается второе дыхание, либо ты терпишь и ждешь пока откроется второе дыхание. Сразу вспоминается что даже поговорить не с кем. Один ты вышел на эту дорогу, один ты и бредешь по ней. Молчи и думай.</p> 
+<p>Не всегда радостно на душе. Как пройду часа два, начнет спина ныть, коленки ультиматум ставить «вот сейчас начнем болеть — и что ты будешь делать?». Присаживаться снова на пять минут нет смысла. Тут есть только два варианта — либо у тебя открывается второе дыхание, либо ты терпишь и ждешь пока откроется второе дыхание. Сразу вспоминается что даже поговорить не с кем. Один ты вышел на эту дорогу, один ты и бредешь по ней. Молчи и думай.</p>
 
 <p>От такого совета я настолько погрузился в мысли, что уже не различаю их. Они все живут отдельно от меня, общаются между собою, летают вокруг. А я стою в эпицентре этого маленького смерча и слушаю музыку. Долго слушаю, окунаюсь в нее с головою.</p>
 
@@ -247,7 +251,7 @@
 <p>Решая эти вопросы усталось не замечается. Пустая серая дорога не пугает, рюкзак не так навязчиво давит вниз. Ты теперь не просто идешь из пункта А в пункт Б (этот нехитрый маршрут совсем скоро закончится, буквально за следующим поворотом). Ты теперь идешь по дороге собственной жизни.</p>
 
 
-<header class="layer grid box bg">
+<header class="zetka-layer is-box">
     <h2>Глава собственной жизни</h2>
 </header>
 
@@ -349,7 +353,7 @@
 
 <p>Поднялась метель.</p>
 
-<header class="layer grid box bg">
+<header class="zetka-layer is-box">
     <h2>Глава метель</h2>
 </header>
 
@@ -390,7 +394,7 @@
 Кончилась метель. Выжил.
 </pre>
 
-<header class="layer grid box bg">
+<header class="zetka-layer is-box">
     <h2>Последняя</h2>
 </header>
 
@@ -408,14 +412,14 @@
 
 <p>Эй! Встречайте меня! Я дома!</p>
 
-<hr divider>
+<hr>
 
-<footer class="layer grid box bg">
+<footer class="zetka-layer is-box">
     <div>
         <p><small>feb.2010</small></p>
         <p><small>markup - dec.2018</small></p>
     </div>
-    <div aside>
+    <div class="zetka-side">
         <p><em>Посвящается Мише Ладыженскому,<br>пошедшему короткой дорогой.</em></p>
     </div>
 </footer>
