--- a/appDev/app6K/usecases-hero.html
+++ b/appDev/app6K/usecases-hero.html
@@ -25,6 +25,8 @@
     <style>
         [demo-chapter] {
             background-color: wheat;
+            padding-top:    2.4rem;
+            padding-bottom: 2.4rem;
         }
         [demo-fullscreen] {
             background-color: hsla(177, 42%, 76%,   1);
@@ -47,20 +49,116 @@
         }
     </style>
 
+    <!-- jQuery -->
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+    <script>
+        // insert random content into paragraphs
+        function p() {
+            const p = document.querySelectorAll('.auto')
+            for ( let i in p ) {
+                let texts = [
+                    'Petrovich is more than just a programming language, it is a complete computer operating system and program development environment. It is named after Ivan Petrovich Pavlov, the guy who demonstrated conditional responses to stimuli in dogs. I would have called the language "Pavlov", but it seems all the cool names for languages have already been used by someone else.',
+                    'In order to understand how Petrovich works, it is instructive to run through some examples. This is a sample interactive Petrovich session, annotated with comments.',
+                    'The user asked Petrovich to do something with some scientific data. It responds first by plotting the data and printing it. Since this is not what the user wanted, he punishes Petrovich, then tries again. Wanting to avoid punishment, Petrovich tries something different, and this time performs an operation useful to the user. To encourage such behaviour, the user rewards Petrovich.'
+                    ]
+                let text = texts[Math.floor(Math.random()*texts.length)]
+                let textnode = document.createTextNode(text)
+                if (p[i].appendChild) p[i].appendChild(textnode)
+            }
+        }
+        $(function(){p()})
+    </script>
+
 
     <!-- ========================================== ʕ⊙ᴥ⊙ʔ = -->
     <!-- ========================================= END HEAD -->
 </head>
 <body class="body-wrap design-template">
 
-<section class="chapter is-markup">
+<section demo-fullscreen class="fullscreen">
 
-<header demo-slide-header class="layer block box bg grid chapter-slide-header">
-    <h2>back-slide <i class="pill bg" id="T01">#T01</i></h2>
-</header>
+    <header class="fullscreen-header is-box is-centered">
+        <h2>
+            fullscreen-header / fullscreen-body / fullscreen-footer
+            <i class="pill bg" id="T02">#T02</i>
+        </h2>
+    </header>
 
-<section demo-chapter class="grid box">
-    <h1>Responsive Data Tables <i class="pill bg" id="T01">#T04</i></h1>
+    <section class="fullscreen-body is-v-padded">
+
+        <!-- box content -->
+        <div class="zetka zetka-as-overmain is-box">
+            <div class="block">
+                <h1 title><a href="">Curacao Gaming Licence</a></h1>
+                <p subtitle>Licensing of all iGaming Products — online casinos, sports betting, poker, lotteries, and bingo!</p>
+            </div>
+            <div class="block">
+                <h2 title><a href="">Banking Solutions</a></h2>
+                <p subtitle>Open bank & processing accounts for your gambling business.</p>
+            </div>
+        </div>
+        <!-- /box content -->
+
+    </section>
+
+    <footer class="fullscreen-footer is-box">
+        <a href="#learn-more-1" class="pill bg title">learn more</a>
+    </footer>
+
+</section>
+<div id="learn-more-1"></div>
+
+
+
+
+
+<section demo-chapter demo-sidebar class="zetka">
+    <h1>Sidebar <i class="pill bg" id="T05">#T05</i></h1>
+    <style>
+        [demo-sidebar] {
+            background-color: pink;
+        }
+        [demo-sidebar] .sidebar {
+            background-color: black;
+            color: white;
+        }
+    </style>
+    <div>
+        <button class="js-toggle-sidebar">open sidebar</button>
+    </div>
+    <nav class="sidebar is-box js-sidebar">
+        <div class="zetka zetka-as-overmain">
+            <h2>Sidebar</h2>
+            <p class="auto"></p>
+            <p class="auto"></p>
+            <p class="auto"></p>
+            <p class="auto"></p>
+            <p class="auto"></p>
+            <p class="auto"></p>
+            <p class="auto"></p>
+            <p class="auto"></p>
+            <p class="auto"></p>
+        </div>
+    </nav>
+    <script>
+        $(function(){
+            $('.js-screen-shadow-overlay').addClass('js-toggle-sidebar')
+            $('.js-toggle-sidebar').on('click',function(){
+                $('html').toggleClass('has-active-sidebar')
+                // Alternate: $('.js-sidebar').toggleClass('is-active')
+            })
+        })
+    </script>
+</section>
+
+
+
+
+
+<section demo-chapter class="zetka zetka-as-overmain">
+
+    <h1>Responsive Data Tables <i class="pill bg" id="T04">#T04</i></h1>
 
     <p>
         Break-point: 600px
@@ -68,7 +166,7 @@
 
     <table class="data-table" data-table-type="1str,2num,3txt">
         <caption>
-            <h2 class="bg is-centered">Simple</h2>
+            <h2 class="bg is-centered">Simple Data Table</h2>
         </caption>
         <thead>
             <tr>
@@ -119,13 +217,14 @@
             </tr>
         </tbody>
     </table>
-    <p aside>
+
+    <p>
         class="data-table"<br>data-table-type="1str,2num,3txt"
     </p>
 
     <table class="data-table has-data-titles" data-table-type="1str,2num,3txt">
         <caption>
-            <h2 class="bg is-centered">Has markup for data-title</h2>
+            <h2 class="bg is-centered">Mod: data-title="Column title"</h2>
         </caption>
         <thead>
             <tr>
@@ -176,105 +275,29 @@
             </tr>
         </tbody>
     </table>
-    <p aside>
+
+    <p>
         class="data-table has-data-titles" data-table-type="1str,2num,3txt"
     </p>
 
 </section>
 
-<section demo-fullscreen class="fullscreen">
 
-    <header class="fullscreen-header">
-        <div dev-box title>
-            fullscreen-header / fullscreen-body / fullscreen-footer
-            <i class="pill bg" id="T02">#T02</i>
-        </div>
-    </header>
 
-    <section class="fullscreen-body box">
 
-        <div class="block group">
-            <div class="block box bg">
 
-                <!-- box content -->
-                <div class="block">
-                    <h1 title><a href="">Curacao Gaming Licence</a></h1>
-                    <p subtitle>Licensing of all iGaming Products — online casinos, sports betting, poker, lotteries, and bingo!</p>
-                </div>
-                <div class="block">
-                    <h2 title><a href="">Banking Solutions</a></h2>
-                    <p subtitle>Open bank & processing accounts for your gambling business.</p>
-                </div>
-                <!-- /box content -->
 
-            </div>
-            <div demo-form class="block box bg">
 
-                <!-- box content -->
-                <p>To apply for a <em>gaming licence</em>, open a <em>bank account</em> or ask a <em>question</em>, please, fill in the form:</p>
-                <form class="block" action="?it-was-form-submit">
-                    <section class="block">
-                        <div class="form-item">
-                             <input tabindex="2" type="text" name="yourname" id="yourname" value="" placeholder="(required)" required />
-                             <label for="yourname">Name</label>
-                        </div>
-                        <div class="form-item">
-                             <input tabindex="2" type="email" name="youremail" id="youremail" value="" placeholder="(required)" required />
-                             <label for="youremail">Email</label>
-                        </div>
-                        <div class="form-item">
-                             <input tabindex="2" type="tel" name="yourphone" id="yourphone" value="" />
-                             <label for="yourphone">Phone</label>
-                        </div>
-                        <div class="form-textarea">
-                             <textarea tabindex="2" name="yourmessage" id="yourmessage" rows="4"></textarea>
-                             <label for="yourmessage">Message or Question</label>
-                        </div>
-                    </section>
-                    <section class="form-submit">
-                         <button tabindex="2" type="submit" class="button">Send</button>
-                         <label></label>
-                    </section>
-                </form>
-                <!-- /box content -->
+<section chapter demo-chapter  class="zetka">
 
-            </div>
-        </div>
+    <h1>
+        <span>Default form</span>
+        <i class="pill bg" id="T03">#T03</i>
+    </h1>
 
-    </section>
-
-    <footer class="fullscreen-footer">
-        <a href="#learn-more-1" class="pill bg title">learn more</a>
-    </footer>
-
-</section>
-
-<div id="learn-more-1"></div>
-
-<!-- fullscreen template -->
-<div class="fullscreen">
-    <div class="fullscreen-header">
-        <div dev-box>fullscreen-header</div>
-    </div>
-    <div class="fullscreen-body">
-        <div dev-box>fullscreen-body</div>
-    </div>
-    <div class="fullscreen-footer">
-        <div dev-box>fullscreen-footer</div>
-    </div>
-</div>
-<!-- fullscreen template -->
-
-</section>
-<section chapter demo-chapter>
-
-    <div demo-form class="block box bg">
+    <div demo-form class="zetka-overmain is-box">
 
         <header>
-            <h3>
-                Default form
-                <i class="pill bg" id="T03">#T03</i>
-            </h3>
             <p>Minimal form template, please, fill in the form:</p>
         </header>
 
@@ -305,6 +328,25 @@
     </div>
 
 </section>
+
+
+<!-- fullscreen template -->
+<div class="fullscreen">
+    <div class="fullscreen-header">
+        <div>fullscreen-header</div>
+    </div>
+    <div class="fullscreen-body">
+        <div>fullscreen-body</div>
+    </div>
+    <div class="fullscreen-footer">
+        <div>fullscreen-footer</div>
+    </div>
+</div>
+<!-- / fullscreen template -->
+
+<!-- empty div for shadow overlay -->
+<div class="screen-shadow-overlay js-screen-shadow-overlay"></div>
+<!-- / empty div for shadow overlay -->
 
 </body>
 </html>
