--- a/appDev/app6K/usecases-js.html
+++ b/appDev/app6K/usecases-js.html
@@ -22,6 +22,7 @@
 
     <script>
     </script>
+    <script src="app/script/research/BFQ-product-system.js"></script>
 
     <!-- ========================================= APP MUTATOR -->
 
