story chapter - welcome appking

--- a/appZapp/demo/appking-story/storytext.html
+++ b/appZapp/demo/appking-story/storytext.html
@@ -1,7 +1,32 @@
-<!doctype html>
-<meta charset="utf-8">
-<title>app story</title>
-<body>
+<!doctype html><!-- app7000-Zapp -->
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- ========================================= HEAD CONTENT -->
+
+
+    <title>ʕ⊙ᴥ⊙ʔ</title>
+
+
+    <!-- ========================================= APP MAIN -->
+
+    <!-- design font -->
+    <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,400i,700&subset=cyrillic" rel="stylesheet">
+
+    <link  href="app/styles/app.css" rel="stylesheet" type="text/css">
+    <script src="app/script/app.js"></script>
+
+
+    <!-- ========================================= APP CUSTOM -->
+
+
+
+    <!-- ========================================== ʕ⊙ᴥ⊙ʔ = -->
+    <!-- ========================================= END HEAD -->
+</head>
+<body class="body-wrap design-template">
 <!-- ========================================= ʕ⊙ᴥ⊙ʔ  -->
 <!-- ========================================= START CONTENT -->
 
@@ -89,5 +114,5 @@
 
 <!-- ========================================= END CONTENT -->
 <!-- ========================================= ʕ⊙ᴥ⊙ʔ  -->
-<footer>EOC.</footer>
 </body>
+</html>
