--- a/appZapp/demo/demo-index.html
+++ b/appZapp/demo/demo-index.html
@@ -45,6 +45,7 @@
 
         <h2>Projects</h2>
         <ul class="zetka-as-overmain">
+           <li><a href="appking-story/storyline.html">appKing storyline</a></li>
             <li><a href="vane/demo-vane.html">Кандава Вана</a></li>
             <li><a href="gl-design-2019/index.html">GL Design</a></li>
         </ul>
