--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -294,6 +294,14 @@
                 </figure>
                 <a href="https://www.10bestdesign.com/dirtymarkup/"><i>Beautify</i></a>
                 <a href="https://www.diffchecker.com/"><i>Diff checker</i></a>
+                <figure>
+                    <a href="https://www.textfixer.com/html/convert-text-html.php"><i>Text→HTML</i></a>
+                    <a href="https://www.textfixer.com/html/html-to-text.php"><i>HTML→Text</i></a>
+                </figure>
+                <figure>
+                    <a href="https://www.textfixer.com/tools/alphabetical-order.php"><i>Text→ABC order</i></a>
+                    <a href="https://www.textfixer.com/html/"><i>…</i></a>
+                </figure>
             </section>
 
             <section c-dev3>
