--- a/appZapp/__demo/usecases/usecases-js.html
+++ b/appZapp/__demo/usecases/usecases-js.html
@@ -124,7 +124,7 @@
             testreport(zzz, 'TestImageZoom: zzz is fine')
             testreport(TestWaypoints(), 'TestWaypoints: point is fine')
 
-            testreport(countSuccessfulReports==countTotalReports, '༼°▽°༽ Run & Test libs: '+countSuccessfulReports+'/'+countTotalReports)
+            testreport(countSuccessfulReports==countTotalReports, 'Run & Test libs: '+countSuccessfulReports+'/'+countTotalReports + ' <==== ༼°▽°༽ ===')
 
             // APP TESTS
 
