is app king a king trouble

--- a/appZapp/devlog.html
+++ b/appZapp/devlog.html
@@ -80,7 +80,7 @@
 
     <section class="zetka">
         <header class="chapter-title">
-            <h2>Learn js patterns</h2>
+            <h2>js pattern</h2>
             <div>2019.2.12</div>
         </header>
         <h3>Factory with a private constructor</h3>
